--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,8 @@
-debug=true
 management.endpoints.web.exposure.include=*
 server.error.whitelabel.enabled=false
+
+logging.level.com.fastcampus.getinline=debug
+logging.level.org.springframework.web.servlet=debug
+
+spring.thymeleaf3.decoupled-logic=true
+spring.thymeleaf.cache=false
