--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,10 @@ build/
 !**/src/main/**/build/
 !**/src/test/**/build/
 
+### querydsl
+/src/main/generated
+
+
 ### STS ###
 .apt_generated
 .classpath
