--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,21 @@
+debug=false
 management.endpoints.web.exposure.include=*
 server.error.whitelabel.enabled=false
 
-logging.level.com.fastcampus.getinline=debug
+# Logging
+logging.level.com.uno.getinline=debug
 logging.level.org.springframework.web.servlet=debug
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=trace
 
-spring.thymeleaf3.decoupled-logic=true
+# View
 spring.thymeleaf.cache=false
+spring.thymeleaf3.decoupled-logic=true
+
+# Database
+spring.jpa.defer-datasource-initialization=true
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+
+# API
+spring.data.rest.base-path=/api
