--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,9 @@
 debug=false
 management.endpoints.web.exposure.include=*
+
 server.error.whitelabel.enabled=false
+server.error.include-exception=true
+server.error.include-stacktrace=always
 
 # Logging
 logging.level.com.uno.getinline=debug
